# CompOSE_EOS_conversion

./: .gitignore  CMakeLists.txt  README.md
results/: DNS(CMF)_cold_neutron_stars.txt  DNS(CMF)_cold_neutron_stars_Esym_exp,_Esym=30,_Lsym=88,_Ksym=0,_Jsym=0,_minus_leptons.txt  DNS(CMF)_hadronic_no_electrons_Yq=0.txt  DNS(CMF)_hadronic_no_electrons_Yq=0_Esym_exp,_Esym=30,_Lsym=88,_Ksym=0,_Jsym=0,_minus_leptons.txt  DNS(CMF)_hadronic_with_electrons.txt  DNS(CMF)_hadronic_with_electrons_Esym_exp,_Esym=30,_Lsym=88,_Ksym=0,_Jsym=0,_minus_leptons,_YQ_expansion.txt  DNS(CMF)_hadronic_with_electrons_Esym_exp,_Esym=30,_Lsym=88,_Ksym=0,_Jsym=0,_minus_leptons.txt  GMSR(H2)_CompOSE_e,mu.txt  SLy2_CompOSE_e,mu.txt
src/: basic_functions.cc  conversion_functions.cc  reading_functions.cc  symmetry_energy_expansion_from_CompOSE_EOS.cc
src/include/: basic_functions.h  config.h  constants.h  conversion_functions_copy.h  conversion_functions_copy.h~  reading_functions.h
